--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Project tracking intro component</title>
+  <title>Project tracking intro component</title>
 
   <link rel="stylesheet" href="./style.css">
   <script src="index.js"></script>
